"""BUILD definitions for cuda_cusparse package"""

# This BUILD file is used within the arch specific cuda redist repository.
#
# Any user-facing target should be listed in _REPO_PUBLIC_TARGETS so that the
# @cuda_cusparse proxy repository can re-export it.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_import.bzl", "cc_import")
load("//:version.bzl", "LIB_VERSIONS")
cc_import(
    name = "cusparse_shared_library",
    shared_library = "lib/libcusparse.so." + LIB_VERSIONS["libcusparse"],
    deps = ["@{cuda_redist_repo}//nvjitlink:nvjitlink_shared_library", ":headers"],
    visibility = ["//visibility:public"],
)
cc_import(
    name = "cusparse",
    static_library = "lib/libcusparse_static.a",
    shared_library = "lib/libcusparse.so." + LIB_VERSIONS["libcusparse"],
    deps = ["@{cuda_redist_repo}//nvjitlink:nvjitlink", ":headers"],
    visibility = ["//visibility:public"],
)

cc_import(
    name = "cusparse_static",
    deps = [":headers"],
    static_library = "lib/libcusparse_static.a",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "shared_library_files",
    srcs = [
        "lib/libcusparse.so." + LIB_VERSIONS["libcusparse"],
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "header_list",
    srcs = [
        "include/cusparse.h",
        "include/cusparse_v2.h",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "headers",
    hdrs = [":header_list"],
    includes = ["include"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)
