"""BUILD definitions for cuda_nvcc package"""

# This BUILD file is used within the arch specific cuda redist repository.
#
# Any user-facing target should be listed in _REPO_PUBLIC_TARGETS so that the
# @cuda_nvcc proxy repository can re-export it.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@{cuda_redist_repo}//:version.bzl", "CUDA_VERSION")
load("@cuda_toolkit//cuda:versions_helper.bzl", "if_version_equal_or_greater_than")
load("@bazel_skylib//rules/directory:directory.bzl", "directory")
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")

filegroup(
    name = "libdevice",
    srcs = if_version_equal_or_greater_than(
        CUDA_VERSION,
        "13.0.0",
        if_true = [],
        if_false = ["nvvm/libdevice/libdevice.10.bc"],
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "nvlink",
    srcs = [
        "bin/nvlink",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "fatbinary",
    srcs = [
        "bin/fatbinary",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "bin2c",
    srcs = [
        "bin/bin2c",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "ptxas",
    srcs = [
        "bin/ptxas",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "bin",
    srcs = glob([
        "bin/**",
    ]) + if_version_equal_or_greater_than(
        CUDA_VERSION,
        "13.0.0",
        if_true = [],
        if_false = ["nvvm/bin/cicc"],
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "link_stub",
    srcs = [
        "bin/crt/link.stub",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "header_list",
    srcs = [
        "include/fatbinary_section.h",
    ] + if_version_equal_or_greater_than(
        CUDA_VERSION,
        "13.0.0",
        if_true = [],
        if_false = ["include/nvPTXCompiler.h"],
    ) + if_version_equal_or_greater_than(
        CUDA_VERSION,
        "13.0.0",
        if_true = [],
        if_false = glob(
            ["include/crt/**"],
            # glob is resolved right away
            allow_empty = True,
        ),
    ),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "headers",
    hdrs = [":header_list"],
    includes = ["include"],
    defines = ["_ALLOW_UNSUPPORTED_LIBCPP"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)
