"""BUILD definitions for cuda_nvdisasm package"""

# This BUILD file is used within the arch specific cuda redist repository.
#
# Any user-facing target should be listed in _REPO_PUBLIC_TARGETS so that the
# @cuda_nvdisasm proxy repository can re-export it.

exports_files([
    "bin/nvdisasm",
])

filegroup(
    name = "nvdisasm",
    srcs = [
        "bin/nvdisasm",
    ],
    visibility = ["//visibility:public"],
)
