"""BUILD definitions for cuda_nvjitlink package"""

# This BUILD file is used within the arch specific cuda redist repository.
#
# Any user-facing target should be listed in _REPO_PUBLIC_TARGETS so that the
# @cuda_nvjitlink proxy repository can re-export it.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_import.bzl", "cc_import")
load("//:version.bzl", "LIB_VERSIONS")
cc_import(
    name = "nvjitlink_shared_library",
    deps = [":headers"],
    shared_library = "lib/libnvJitLink.so." + LIB_VERSIONS["libnvjitlink"],
    visibility = ["//visibility:public"],
)
cc_import(
    name = "nvjitlink",
    static_library = "lib/libnvJitLink_static.a",
    shared_library = "lib/libnvJitLink.so." + LIB_VERSIONS["libnvjitlink"],
    deps = [":headers"],
    visibility = ["//visibility:public"],
)

cc_import(
    name = "nvjitlink_static",
    deps = [":headers"],
    static_library = "lib/libnvJitLink_static.a",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "shared_library_files",
    srcs = [
        "lib/libnvJitLink.so." + LIB_VERSIONS["libnvjitlink"],
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "header_list",
    srcs = ["include/nvJitLink.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "headers",
    hdrs = [":header_list"],
    includes = ["include"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)
