"""BUILD definitions for cuda_nvjitlink package"""

# This BUILD file is used within the arch specific cuda redist repository.
#
# Any user-facing target should be listed in _REPO_PUBLIC_TARGETS so that the
# @cuda_nvjitlink proxy repository can re-export it.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_import.bzl", "cc_import")
load("//:version.bzl", "LIB_VERSIONS")
cc_import(
    name = "nvjitlink_shared_library",
    deps = [":headers"],
    shared_library = "lib/libnvJitLink.so." + LIB_VERSIONS["libnvjitlink"],
    visibility = ["//visibility:public"],
)
cc_import(
    name = "nvjitlink_static_library",
    deps = [":headers"],
    static_library = "lib/libnvJitLink_static.a",
)

cc_library(
    name = "nvjitlink",
    deps = [":nvjitlink_shared_library"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "nvjitlink_static",
    deps = [":nvjitlink_static_library", "@{cuda_redist_repo}//nvcc:nvptxcompiler"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "shared_library_files",
    srcs = [
        "lib/libnvJitLink.so." + LIB_VERSIONS["libnvjitlink"],
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "header_list",
    srcs = ["include/nvJitLink.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "headers",
    hdrs = [":header_list"],
    includes = ["include"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)
