"""BUILD definitions for cuda_nvml package"""

# This BUILD file is used within the arch specific cuda redist repository.
#
# Any user-facing target should be listed in _REPO_PUBLIC_TARGETS so that the
# @cuda_nvml proxy repository can re-export it.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_import.bzl", "cc_import")

filegroup(
    name = "header_list",
    srcs = ["include/nvml.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "headers",
    hdrs = [":header_list"],
    includes = ["include"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)

cc_import(
    name = "nvidia-ml_stub",
    deps = [":headers"],
    interface_library = "lib/stubs/libnvidia-ml.so",
    system_provided = 1,
    visibility = ["//visibility:public"],
)

cc_import(
    name = "nvidia_ml_static_stub",
    deps = [":headers"],
    static_library = "lib/stubs/libnvidia-ml.a",
    visibility = ["//visibility:public"],
)

cc_import(
    name = "nvml",
    deps = [":headers"],
    interface_library = "lib/stubs/libnvidia-ml.so",
    static_library = "lib/stubs/libnvidia-ml.a",
    system_provided = 1,
    visibility = ["//visibility:public"],
)
