"""BUILD definitions for cuda_nvprune package"""

# This BUILD file is used within the arch specific cuda redist repository.
#
# Any user-facing target should be listed in _REPO_PUBLIC_TARGETS so that the
# @cuda_nvprune proxy repository can re-export it.

filegroup(
    name = "nvprune",
    srcs = [
        "bin/nvprune",
    ],
    visibility = ["//visibility:public"],
)
